@@ -42,9 +42,10 @@
        Zcl_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~31  +----+----+----+----+----+
+     Zndex_E : //z 2015-11-10 19:09:03 L.51 '17457 T1740529743.K ~33  +----+----+----+----+----+
      TimeCnt : //z 2015-10-08 11:20:22 L.84 '45578 T1269073511.K ~2   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~7   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-11-10 19:09:03 L.51 '17457 T1740529743.K ~8   +----+----+----+----+----+
+     #8   R+ : //z 2015-11-10 19:09:03 L.51 '17457 T1740529743.K ~8     V+.40   L+.232  
      #7   R+ : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~7     V+.37   L+.212  
      #6   R+ : //z 2015-10-27 16:45:31 L.65 '26069 T3546119828.K ~6     V+.35   L+.193  
      #5   R+ : //z 2015-10-19 15:28:36 L.73 '30684 T150545146 .K ~5     V+.33   L+.174  
@@ -53,7 +54,8 @@
      #2   R+ : //z 2015-10-08 11:19:16 L.84 '45644 T1268210994.K ~2     V+.12   L+.114  
      #1   R+ : //z 2015-10-08 11:18:47 L.84 '45673 T1268175157.K ~1     V+.9    L+.94   
      File.Op : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
-     Version : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~38    R+.7    L+.214  --+----+
+     Version : //z 2015-11-10 19:09:03 L.51 '17457 T1740529743.K ~41    R+.8    L+.234  --+----+
+     #2   R+ : //z 2015-11-10 19:09:03 L.51 '17457 T1740529743.K ~40    R+.8    L+.233  V+.40   
      #2   V+ : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~38    R+.7    L+.214  
      #1   R+ : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~37    R+.7    L+.213  V+.37   
      #1   R+ : //z 2015-10-27 16:45:31 L.65 '26069 T3546119828.K ~35    R+.6    L+.194  V+.35   
@@ -212,3 +214,20 @@ Week.Kaizen
 五，W.2015-11-06 
 六，R.2015-11-07 
 #endregion //z 2015-11-02 10:02:26 L.59 '50254 BG57IV3@XCL T900125733 .K.F2564861307-+----+----+
+
+#region 11-10 19:09 R#.8    @第45周总结 2015-11-08 --> 2015-11-14
+Week.Plan
+	01. 
+Week.Done
+	01. 
+Week.Kaizen
+	01. 
+
+日，R.2015-11-08 
+一，W.2015-11-09 
+二，W.2015-11-10 
+三，W.2015-11-11 
+四，W.2015-11-12 
+五，W.2015-11-13 
+六，R.2015-11-14 
+#endregion //z 2015-11-10 19:09:03 L.51 '17457 BG57IV3@XCL T1740529743.K.F2564861307-+----+----+
